--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/src/input.css" rel="stylesheet">
   <!-- <link href="output.css" rel="stylesheet"> -->
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="output.css" rel="stylesheet">
 
 </head>
 <body class="py-10">
