--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="flex-1">
                     <div class="flex items-center justify-between">
                         <h3 class="mt-1 text-base font-medium leading-6 text-gray-500">
-                            Tyvia foundation
+                            Tycia foundation
                         </h3>
                         <!-- tags -->
                         <div class="flex items-center ">
