--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <a href="https://lawfoundationpatna.org/" target="_blank">View Demo</a>
                     </span>
                     <span class="text-l font-bold leading-7 text-gray-800 group-hover:text-cool-indigo-500 underline">
-                        <a href="#" target="_blank">GitHub</a>
+                        <a href="https://github.com/Lily-Sneha/Law-Foundation" target="_blank">GitHub</a>
                     </span>
                 </div>
           
