--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <a href="https://alinepartners.org/">View Demo</a>
                     </span>
                     <span class="text-l font-bold leading-7 text-gray-800 group-hover:text-cool-indigo-500 underline">
-                        <a href="#" target="_blank">GitHub</a>
+                        <a href="https://alinepartners.org/" target="_blank">GitHub</a>
                     </span>
                 </div>
           
